--- a/src/components/CardContainer/CardContainer.module.sass
+++ b/src/components/CardContainer/CardContainer.module.sass
@@ -1,6 +1,6 @@
 .card_container
   display: grid
-  grid-template-columns: repeat(4, 200px)
+  grid-template-columns: repeat(3, 1fr)
   grid-auto-rows: 200px
   grid-gap: 20px
   padding: 20px 40px
