сделал зацикленную карусель пользователей, пользователи подгружаются с reqres.in, немного поиграл с визуалом(поправил отступы).

--- a/src/components/Nav/Nav.module.sass
+++ b/src/components/Nav/Nav.module.sass
@@ -1,7 +1,6 @@
 .navigation
-  height: 100px
   display: flex
   padding: 40px
 
-.navigation > Button
-  margin: 10px
+.navigation > Button+ Button
+  margin: 0 10px 0
