--- a/src/components/Nav/Nav.module.sass
+++ b/src/components/Nav/Nav.module.sass
@@ -2,5 +2,5 @@
   display: flex
   padding: 40px
 
-.navigation > Button+ Button
-  margin: 0 10px 0
+.navigation > Button + Button
+  margin-left: 10px
