добавил заголовки, для понимания блоков.

--- a/src/components/Nav/Nav.module.sass
+++ b/src/components/Nav/Nav.module.sass
@@ -1,6 +1,13 @@
+.outContainer
+  display: flex
+  flex-direction: column
+
 .navigation
   display: flex
   padding: 40px
+
+h1
+  align-self: center
 
 .navigation > Button + Button
   margin-left: 10px
