--- a/src/components/PostContainer/PostContainer.module.sass
+++ b/src/components/PostContainer/PostContainer.module.sass
@@ -1,3 +1,11 @@
+.container
+  display: flex
+  flex-direction: column
+
+  >h2
+    align-self: center
+
+
 .postContainer
   display: grid
   grid-gap: 20px
