--- a/src/components/UserContainer/UserContainer.module.sass
+++ b/src/components/UserContainer/UserContainer.module.sass
@@ -1,5 +1,11 @@
 .outContainer
   padding: 0 40px
+  display: flex
+  flex-direction: column
+
+
+  >h2
+    align-self: center
 
 .container
   display: grid
