--- a/src/components/SingleUserContainer/SingleUserContainer.module.sass
+++ b/src/components/SingleUserContainer/SingleUserContainer.module.sass
@@ -3,6 +3,13 @@
   display: flex
   flex-direction: column
 
+  >h1
+    align-self: center
+    padding-bottom: 20px
+
+  >h2
+    align-self: center
+
 
   .container
     display: flex
